--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.4",
     "@types/three": "^0.152.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.6",
     "blockies": "^0.0.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
